--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
+    "mongodb": "^4.2.2",
+    "mongoose": "^6.1.3",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
