--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/marked": "^4.0.1",
     "framer-motion": "^4",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.0.9",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
     "next": "12.0.7",
