--- a/package.json
+++ b/package.json
@@ -13,18 +13,28 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@types/marked": "^4.0.1",
+    "@types/react-google-recaptcha": "^2.1.5",
+    "@types/react-recaptcha": "^2.3.4",
+    "emailjs": "^4.0.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4",
     "gray-matter": "^4.0.3",
     "marked": "^4.0.9",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
     "next": "12.0.7",
+    "quill": "^1.3.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^4.3.1",
+    "react-quill": "^1.3.5",
+    "react-quilljs": "^1.3.1",
+    "react-recaptcha": "^2.3.10"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
+    "@types/quill": "^2.0.9",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
