--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
     "next": "12.0.7",
-    "quill": "^1.3.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
-    "react-quill": "^1.3.5",
-    "react-quilljs": "^1.3.1",
-    "react-recaptcha": "^2.3.10"
+    "react-quill": "^2.0.0-beta.4",
+    "react-recaptcha": "^2.3.10",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
