--- a/package.json
+++ b/package.json
@@ -8,35 +8,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.3",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@types/marked": "^4.0.1",
+    "@chakra-ui/icons": "^2.0.9",
+    "@chakra-ui/react": "^2.3.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@types/marked": "^4.0.7",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-recaptcha": "^2.3.4",
-    "emailjs": "^4.0.0",
+    "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^4",
+    "framer-motion": "^7.3.2",
     "gray-matter": "^4.0.3",
-    "marked": "^4.0.9",
-    "mongodb": "^4.2.2",
-    "mongoose": "^6.1.3",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "marked": "^4.1.0",
+    "mongodb": "^4.9.1",
+    "mongoose": "^6.6.0",
+    "next": "12.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-icons": "^4.3.1",
-    "react-quill": "^2.0.0-beta.4",
+    "react-icons": "^4.4.0",
+    "react-quill": "^2.0.0",
     "react-recaptcha": "^2.3.10",
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "16.11.12",
+    "@types/node": "18.7.17",
     "@types/quill": "^2.0.9",
-    "@types/react": "17.0.37",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.3"
+    "@types/react": "18.0.19",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
+    "typescript": "4.8.3"
   }
 }
