--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "marked": "^4.1.0",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
-    "next": "12.3.0",
+    "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
