--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "marked": "^4.0.9",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-quill": "^2.0.0-beta.4",
@@ -36,7 +36,7 @@
     "@types/quill": "^2.0.9",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^13.4.19",
     "typescript": "4.5.3"
   }
 }
